# MergeScope

./: .gitignore  LICENSE  PRIVACY.md  README.md  mergescope.yaml  pyproject.toml
.github/workflows/: publish.yml
src/mergescope/: __main__.py  agent.py  cli.py  config.py  jira_ids.py  mcp_client.py  mcp_server.py  report.py
tests/: test_agent.py  test_config.py  test_jira_ids.py  test_mcp_client.py  test_mcp_server.py
